PLT-4498 Prevent .post__header from collapsing for iPhone 6

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -1276,6 +1276,24 @@
                     height: auto;
                 }
             }
+            .post__header {
+                .col__name {
+                    .user-popover {
+                        max-width: 80px;
+                    }
+                }
+            }
+        }
+        .search-items-container {
+            .post {
+                .post__header {
+                    .col__name {
+                        .user-popover {
+                            max-width: 120px;
+                        }
+                    }
+                }
+            }
         }
     }
 
